--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-# concrete dependencies
-# todo: move abstract dependencies to setup.cfg
-flask
-requests
-lxml
+certifi==2021.5.30 # via requests
+chardet==4.0.0 # via requests
+click==8.0.1 # via flask
+flask==2.0.1 # via script-facade (setup.py)
+idna==2.10 # via requests
+itsdangerous==2.0.1 # via flask
+jinja2==3.0.1 # via flask
+markupsafe==2.0.1 # via jinja2
+requests==2.25.1 # via script-facade (setup.py)
+urllib3==1.26.5 # via requests
+werkzeug==2.0.1 # via flask
