--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,8 @@ include_package_data = True
 install_requires =
     flask
     lxml
-    requests
+    redis
+    requests-cache
 
 [options.extras_require]
 dev =
