Create docker image tags corresponding to git tags

--- a/.github/workflows/docker-cd.yaml
+++ b/.github/workflows/docker-cd.yaml
@@ -19,4 +19,5 @@ jobs:
           # configured at repo settings/secrets
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          tag_semver: true
+          # create docker image tags to match git tags
+          tag_names: true
