--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2021.5.30 # via requests
 chardet==4.0.0 # via requests
 click==8.0.1 # via flask
 flask==2.0.1 # via script-facade (setup.py)
+gunicorn==20.1.0 # via script_facade (setup.py)
 idna==2.10 # via requests
 itsdangerous==2.0.1 # via flask
 jinja2==3.0.1 # via flask
